tests/checker/diagnostics/0053_core_tuple_annotation_mismatch_05.ml.infer.expected
File "0053_core_tuple_annotation_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0053_core_tuple_annotation_mismatch_05 is not a valid module name.

File "0053_core_tuple_annotation_mismatch_05.ml", line 1, characters 28-32:
1 | let epsilon : int * bool = (true, 4)
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
